# simple-pruner

./: Cargo.toml
.github/workflows/: publish.yml
src/: bindings.rs  lib.rs
