[package]
name = "simple-pruner"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component.target]
registry = "ghcr.io/promptrs"
package = "promptrs:core"
version = "0.1.1"
world = "pruner"

[package.metadata.component.dependencies]
